fix toàn bo project

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - Brand</title>
+    <title>Tinder | Hẹn hò, kết bạn và gặp gỡ người mới</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic">
@@ -26,7 +26,8 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item mx-0 mx-lg-1"></li>
                     <li class="nav-item mx-0 mx-lg-1"><button class="btn btn-primary" data-bss-hover-animate="pulse" type="button" style="background: rgb(44,62,80);border-width: 0;">Tiếng Việt</button></li>
-                    <li class="nav-item mx-0 mx-lg-1"><a class="btn btn-primary" role="button" data-bss-hover-animate="pulse" style="border-radius: 10px;height: 40px;border-width: 0px;opacity: 1;background: url(&quot;assets/img/butom.png&quot;);" href="dangnhap.html">Đăng Nhập</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="btn btn-primary" role="button" data-bss-hover-animate="pulse" style="border-radius: 10px;height: 40px;border-width: 0px;opacity: 1;background: url(&quot;assets/img/butom.png&quot;);" href="dangnhap.html
+">Đăng Nhập</a></li>
                 </ul>
             </div>
         </div>
