--- a/dangki.html
+++ b/dangki.html
@@ -32,7 +32,7 @@
                 <div class="form-group">
                     <div class="form-check"><label class="form-check-label"><input class="form-check-input" type="checkbox">Tôi đồng ý với các điều khoản cấp phép<br></label></div>
                 </div>
-                <div class="form-group"><a class="btn btn-primary btn-block" role="button" href="index.html">ĐĂNG KÍ</a></div><a class="already" href="dangnhap.html">Bạn đã có tài khoản? đăng nhập tại đây.</a>
+                <div class="form-group"><a class="btn btn-primary btn-block" role="button" href="index.handlebars">ĐĂNG KÍ</a></div><a class="already" href="dangnhap.html">Bạn đã có tài khoản? đăng nhập tại đây.</a>
             </form>
         </div>
     </div>
